<resources>
    <string name="app_name">Celestial</string>
    <string name="todo">TODO</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="skip">skip</string>
    <string name="Skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="screen1">Get curated routines for your skin</string>
    <string name="screen2">Daily tips for your skin</string>
    <string name="screen3">Get check ups by dermatologist</string>
    <string name="screen1desc">Personalised skin care routine which is best suit for your skin.
       </string>
    <string name="screen2desc">Daily tips to help you nurture your skin.
        </string>
    <string name="screen3desc">Tips from dermatologist to improve your skin.
    </string>
    <string name="startDesc">Get started with the journey to improve your skin</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_acct">Already have an Account? LogIn</string>
    <string name="user_name">Username</string>
    <string name="log_in">Log In</string>
    <string name="not_yet_registered_signup">Not yet Registered? SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="forgot_Password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">LogOut</string>
    <string name="hello">Hello!</string>
    <string name="click">Click</string>
    <string name="welcome_to_our_App">Welcome to our app</string>
    <string name="get_started">Get Started</string>
    <string name="quick_tips_to_nurture_your_skin">Quick tips to nurture your skin</string>
    <string name="home">Home</string>
    <string name="routines">Routines</string>
    <string name="dermatologist">Dermatologist</string>
    <string name="profile">Profile</string>
    <string name="Tips">tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_routine">Check Routine</string>
    <string name="dermatologist_check_up">Dermatologist Check-Up</string>
    <string name="add_a_caption">Add a caption...</string>
    <string name="add_a_Caption">Add a caption...</string>
    <string name="loading">Loading...</string>
    <string name="enter_name_of_doc">Enter name of doc</string>
    <string name="enter_address">Enter address</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_the_description">Enter the Description</string>
    <string name="enter_the_name_of_product">Enter the name of product</string>
    <string name="add_caption">Add a caption...</string>
    <string name="enter_the_name_of_dermetologist">Enter the name of dermetologist</string>
    <string name="enter_the_address">Enter the Address</string>
    <string name="my_routine">MY ROUTINE</string>
    <string name="_9_step_routine_for_clear_skin">9-Step Routine for Clear Skin</string>
    <string name="sunscreen">Sunscreen</string>
    <string name="cleanser">Cleanser</string>
    <string name="toner">Toner</string>
    <string name="serum">Serum</string>
    <string name="eye_cream">Eye Cream</string>
    <string name="moisturizer">Moisturizer</string>
    <string name="_6_step_routine_for_your_skin">6-Step Routine for Your Skin</string>
    <string name="enter_the_name_of_the_product">Enter the name of the Product</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="routine">Morning Routine:\n
                                    1.Cosrx low ph good morning facewash\n
                                    2.Ginseng water essence (toner)\n
                                    3.The Ordinary Caffeine solution(eye cream)\n
                                    4.Minimalist salicylic acid\n
                                    5.Minimalist sepicalm moisturizer\n
                                    6.Conscious Chemist sunscreen(yellow)\n

                                Night Routine:\n
                                1.Cosrx low ph good morning facewash\n
                                2.The Ordinary Caffeine solution(eye cream)\n
                                3.Dynasty cream (moisturizer)</string>


</resources>