<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/login"
    android:background="@drawable/login_new"
    tools:context=".logIn">

    <androidx.cardview.widget.CardView
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/grey_blue"
                android:textSize="36sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/user_name"
                android:padding="8dp"
                android:textColor="@color/grey_blue"
                android:textColorHint="@color/grey_blue">

            </EditText>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/grey_blue"
                android:textColorHint="@color/grey_blue"
                app:cornerRadius="20dp">

            </EditText>
            
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/grey_blue"
                android:text="@string/log_in"
                android:textSize="18sp">
            </Button>


            <TextView
                android:id="@+id/signUpRedirectText"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/not_yet_registered_signup"
                android:textColor="@color/grey_blue"
                android:textSize="18sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>