<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/routines"
    tools:context=".routine">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-128dp"
        android:background="@drawable/lavender_border"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/_6_step_routine_for_your_skin"
        android:textColor="@color/grey_blue"
        android:textSize="28sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-light"
        />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="402dp"
        android:layout_height="590dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        android:columnCount="3"
        android:rowCount="6">

        <androidx.cardview.widget.CardView
            android:id="@+id/Moisturizer"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/moisturizer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moisturizer"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Cleanser"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cleanser" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cleanser"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Toner"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/toner" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toner"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Serum"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/serum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serum"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/EyeCream"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/eyecream" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eye_cream"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Sunscreen"
            android:layout_width="115dp"
            android:layout_height="90dp"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_margin="8dp"
            android:backgroundTint="@color/misty_rose"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sunscreen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunscreen"
                    android:textAlignment="center"
                    android:textColor="@color/grey_blue"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>

</RelativeLayout>